EL CAMBIO QUE DEFINE TODO....

--- a/public/aindex.html
+++ b/public/aindex.html
@@ -5,19 +5,17 @@
 	<title>La Ceiba</title>
 	<link rel="stylesheet" href="/sources/css/estilos.css">
 	<link rel="shortcut icon" href="sources/img/icons8-oak-tree-16.png" type="image/x-icon">
+	
 </head>
 <body>
 	<header class="header">
 		<div class="container">
-		<div class="btn-menu">
-			<label for="btn-menu">☰</label>
-		</div>
 			<div class="logo">
 				<h1>La Ceiba</h1>
 			</div>
 			<nav class="menu">
-				<a href="/">Salir</a>
-				<a href="#">Nosotros</a>
+				<a href="paginas/inicio_de_sesion.html">Login</a>
+				<a href="/paginas/nosotros.html">Nosotros</a>
 				<a target="_blank" href="https://www.facebook.com/profile.php?id=100066171731818&mibextid=LQQJ4d">Faceboock</a>
 				<a href="#">Contacto</a>
 			</nav>
@@ -25,20 +23,27 @@
 	</header>
 	<div class="capa"></div>
 <!--	--------------->
-<input type="checkbox" id="btn-menu">
-<div class="container-menu">
-	<div class="cont-menu">
-		<nav>
-			<a href="/goproveedor">Tabla Proveedor</a>
-			<a href="/gocliente">Tabla Cliente</a>
-			<a href="/godetallesalida">Tabla Detalle_Salida</a>
-			<a href="/gosalida">Tabla Salida</a>
-			<a href="/goproducto">Tabla Producto</a>
-			<a href="/gocategoria">Tabla Categoria</a>
-			<a href="/gousuario">Tabla Usuarios</a>
-		</nav>
-		<label for="btn-menu">✖️</label>
+
+
+
+<!--
+
+	<div class="ImagenesProducto" style="align-items: center;">
+		<section>
+			<article>
+				<img src="" alt="Cloro">
+			</article>
+			<article>
+				<img src="" alt="Jabon">
+			</article>
+			<article>
+				<img src="" alt="Escoba">
+			</article>
+			<article>
+				<img src="" alt="">
+			</article>
+		</section>
 	</div>
-</div>
+-->
 </body>
 </html>
